--- a/style.css
+++ b/style.css
@@ -163,3 +163,15 @@ ul {
 .color-title-content{ color: #A1887F; }
 .list-title-style { font-style: italic; font-size: 0.9rem; }
 .last-p-style { font-size: 1.1rem; }
+
+/*<------------------------------------------------------------------------>
+<------------------                $Others                  ------------------>
+<------------------------------------------------------------------------->*/
+
+
+@media (max-width: 768px) {
+	aside
+	{
+		width: 100%;
+	}
+}
