--- a/style.css
+++ b/style.css
@@ -170,8 +170,10 @@ ul {
 
 
 @media (max-width: 768px) {
+	body {flex-direction: column;}
 	aside
 	{
 		width: 100%;
+		flex-direction: row;
 	}
 }
