--- a/style.css
+++ b/style.css
@@ -163,6 +163,11 @@ ul {
 .color-title-content{ color: #A1887F; }
 .list-title-style { font-style: italic; font-size: 0.9rem; }
 .last-p-style { font-size: 1.1rem; }
+/*<------------------------------------------------------------------------>
+<------------------                $status                  ------------------>
+<------------------------------------------------------------------------->*/
+.is-header-xs {display: none;}
+.is-hidden-md { display:none; }
 
 /*<------------------------------------------------------------------------>
 <------------------                $Others                  ------------------>
@@ -170,10 +175,52 @@ ul {
 
 
 @media (max-width: 768px) {
-	body {flex-direction: column;}
-	aside
-	{
+
+/*<------------------------------------------------------------------------>
+<------------------                $base                   ------------------>
+<------------------------------------------------------------------------->*/
+
+	body {flex-direction: column; width: 100%;}
+
+	aside {
 		width: 100%;
-		flex-direction: row;
 	}
+	figure { width: 33.3333334%; }
+	strong { color: #fff; }
+
+
+
+/*<------------------------------------------------------------------------>
+<------------------                $layouts                  ------------------>
+<------------------------------------------------------------------------->*/
+.l-aside-header-xs {
+	width: 100%;
+	display:flex; 
+	flex-direction: row; 
+	background-color: #EFEBE9;
+	padding-bottom: 2rem;
 }
+.l-aside-contact-xs {margin-top: 0;}
+
+.l-main-section {margin: 0;}
+
+.l-list-items {display:block; padding-top: 1rem;}
+.l-items-date { width: 100%;}
+.l-list-icons { flex-wrap: wrap;}
+.l-list-icons-xs { padding-left: 1rem; padding-right: 1rem;}
+.last-p-style { margin-top: 0; }
+
+/*<------------------------------------------------------------------------>
+<------------------                $module                   ------------------>
+<------------------------------------------------------------------------->*/
+.mark-xs{ background-color: #EFEBE9;}
+.last-div-color-xs{ background-color: #29B6F6;}
+
+/*<------------------------------------------------------------------------>
+<------------------                $status                   ------------------>
+<------------------------------------------------------------------------->*/
+	.is-hidden-xs { display: none;}
+	.is-hidden-md { display:block;}
+}
+
+/* voir les probleme de backgrounds-color*/
