--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ a{ color: #37474F; }
 a:hover
 {
 	font-weight: bold;
-	font-size: 1.35vw;
+	font-size: 1.05rem;
 }
 section{width: 100%;}
 
@@ -64,10 +64,10 @@ h1,h2,h3 {
 	font-family: RobotoThin, Arial, sans-serif;
 }
 
-strong {color:#29B6F6;}
+strong { color: #fff; }
 mark {
 	background-color: #EFEBE9;
-	border-bottom: 1px #29B6F6 solid;
+	border-bottom: 1px #fff solid;
 }
 img {
 	width: 100%;
@@ -88,6 +88,7 @@ ul {
 	text-align:center;
 
 }
+/*.l-aside-div {display:flex; flex-direction: column; justify-content: space-between; } */
 .l-list-contact {flex-direction: column; padding-top: 0.65vw;}
 .l-contact-icons {
 	display:block;
@@ -122,7 +123,7 @@ ul {
 <------------------                $module                   ------------------>
 <------------------------------------------------------------------------->*/
 .aside-title {
-	color :#29B6F6;
+	color : #EFEBE9;
 	background-color: #37474F;
 	padding-top: 0.26vw;
 	padding-bottom: 0.26vw;
@@ -135,7 +136,11 @@ ul {
 	padding: 0.91vw;
 }
 
-.section-icons {color :#29B6F6;}
+.section-icons {
+	color :#29B6F6;
+	padding-left: 1.3vw;
+	padding-right: 1.3vw;
+}
 .section-title {
 	border-bottom: 1px #29B6F6 solid;
 	padding-bottom:0.91vw;
@@ -185,7 +190,6 @@ ul {
 			width: 100%;
 		}
 		figure { width: 33.3333334%; }
-		strong { color: #fff; }
 
 
 
@@ -199,6 +203,7 @@ ul {
 		background-color: #EFEBE9;
 		/*padding-bottom: 2rem; */
 	}
+	.l-aside-header-div {align-self: center;}
 	.l-aside-contact-xs {margin-top: 0;}
 
 	.l-main-section {margin: 0;}
@@ -220,6 +225,14 @@ ul {
 	<------------------------------------------------------------------------->*/
 	.mark-xs{ background-color: #EFEBE9;}
 	.last-div-color-xs{ background-color: #29B6F6;}
+
+	.section-header-h1	{font-size: 3rem;}
+	.section-header-h2 {font-size: 1.5rem;}
+	.section-h3 { font-size: 1.3rem;}
+	.section-h4 {font-size: 1rem;}
+	.size-icons-dot { font-size: 0.5rem; }
+	.list-title-style { font-size: 1rem; }
+	.last-p-style { font-size: 0.9rem; }
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $status                   ------------------>
