--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ ul {
 		font-size: 1.17vw;
 		font-weight: normal;
 		font-style: italic;
+		color: #9E9E9E;
 }
 
 .disco-font {font-family:DiscoRegular;}
