--- a/style.css
+++ b/style.css
@@ -249,6 +249,8 @@ ul {
 	@media only screen and (max-width: 768px;)
 	{
 		.section-title { margin-bottom: 2vw; }
+		.l-list-items { margin-bottom: 2vw; }
+		.size-icons-dot { font-size : 1vw;}
 	}
 
 	/* voir les MQ pour le layout sur mobile  */
