--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ ul {
 		text-align: center;
 	/* margin-left: 2rem;
 	  	margin-right: 2rem;
-	  	margin-top: 2rem; /*
+	  	margin-top: 2rem; */
 	  }
 
 	/*<------------------------------------------------------------------------>
