--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media screen and (max-width: 991px) {
+@media only screen and (max-width: 991px) {
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $base                   ------------------>
