ajout d'un condition portrait à la MQ

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 768px) and (orientation: portrait) {
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $base                   ------------------>
