--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media only screen and (max-width: 768px) and (orientation: portrait) {
+@media only screen and (max-width: 991px) and (orientation: portrait) { /*tablets and phone portrait */
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $base                   ------------------>
