--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media only screen and (max-width: 767.98px) { /*tablets and phone portrait */
+@media only screen and (max-width: 991px) and (orientation: portrait) { /*tablets and phone portrait */
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $base                   ------------------>
