--- a/style.css
+++ b/style.css
@@ -202,11 +202,12 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media only screen and (max-width: 991px) and (orientation: portrait) { /*tablets and phone portrait */
+@media (-webkit-min-device-pixel-ratio: 2){
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $base                   ------------------>
 	<------------------------------------------------------------------------->*/
+
 
 		body {flex-direction: column; width: 100%;}
 
