--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media (-webkit-min-device-pixel-ratio: 1.5) {
+@media (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 200dpi) {
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $base                   ------------------>
