--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 200dpi) {
+@media only screen and (max-device-width: 767.98px) {
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $base                   ------------------>
