--- a/style.css
+++ b/style.css
@@ -202,7 +202,9 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media only screen and (max-device-width: 767.98px) {
+@media	only screen 
+		and (max-device-width: 767.98px;) /*phone */
+		or (max-device-width: 2180px; max-width: 991px;) /*windows resizing under 991px on desktop*/{ 
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $base                   ------------------>
