MQ ajout d'une condition pour resizing sur pc correction2

--- a/style.css
+++ b/style.css
@@ -202,9 +202,9 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media	only screen 
+@media  screen 
 		and (max-device-width: 767.98px) /*phone */
- 		or (max-device-width:2180px) and (max-width: 991px;) /*windows resizing under 991px on desktop*/
+ 		, (max-device-width:2180px) and (max-width: 991px) /*windows resizing under 991px on desktop*/
 		{ 
 
 	/*<------------------------------------------------------------------------>
