--- a/style.css
+++ b/style.css
@@ -202,9 +202,8 @@ ul {
 <------------------                $Others                  ------------------>
 <------------------------------------------------------------------------->*/
 
-@media  screen 
-		and (max-device-width: 767.98px) /*phone */
- 		, (max-device-width:2180px) and (max-width: 991px) /*windows resizing under 991px on desktop*/
+@media  (max-device-width: 767.98px), /*phone */
+ 		(max-device-width:2180px) and (max-width: 991px) /*windows resizing under 991px on desktop*/
 		{ 
 
 	/*<------------------------------------------------------------------------>
