--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ ul {
 <------------------------------------------------------------------------->*/
 
 @media  (max-device-width: 767.98px), /*phone */
- 		(max-device-width:2180px) and (max-width: 767.98px) /*windows resizing under 768px on desktop*/
+ 		(min-device-width:991px) and (max-width: 767.98px) /*windows resizing under 768px on desktop*/
 		{ 
 
 	/*<------------------------------------------------------------------------>
