--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ ul {
 
 	.section-h3 { font-size: 1.4rem;}
 	.section-h4 {font-size: 0.8rem;}
-	.size-icons-dot {paddin-top: 1rem; font-size: 0.7rem;}
+	.size-icons-dot {padding-top: 1rem; font-size: 0.7rem;}
 	.list-title-style { font-size: 1.2rem;}
 	.last-p-style { font-size: 1.1rem;}
 
