--- a/style.css
+++ b/style.css
@@ -238,7 +238,6 @@ ul {
 	.l-list-items {display:block; /*padding-top: 1.3vw;*/}
 	.l-items-date { width: 100%;}
 	.l-list-icons { flex-wrap: wrap;}
-	.l-list-icons-xs {/* padding-left: 1.3vw; padding-right: 1.3vw;*/}
 	.last-p-style { margin-top: 0; }
 	.section-title { 
 		text-align: center;
@@ -257,11 +256,20 @@ ul {
 
 	.section-header-h2 {font-size: 3.9vw;}
 
+	.hardskills-xs { font-size: 1.2rem; }
+
+	.contact-xs { font-size: 1.1rem;}
+
 	.section-h3 { font-size: 1.4rem;}
 	.section-h4 {font-size: 0.8rem;}
-	.size-icons-dot {padding-top: 1rem; font-size: 0.7rem;}
+
+	.size-icons-dot {font-size: 0.7rem;}
+
 	.list-title-style { font-size: 1.2rem;}
+
 	.last-p-style { font-size: 1.1rem;}
+
+
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $status                   ------------------>
