--- a/style.css
+++ b/style.css
@@ -264,11 +264,11 @@ ul {
 
 	.section-header-h2 {font-size: 3.9vw;}
 
-	.hardskills-xs { font-size: 2rem; }
+	.hardskills-hobbies-xs { font-size: 2rem; }
 
 	.contact-xs { font-size: 2rem;}
 
-
+	.hardskills-xs { font-size: 1.5rem; }
 	.section-h3 { font-size: 1.4rem;}
 	.section-h4 {font-size: 0.8rem;}
 
