Phone list hardskills item padding left right

--- a/style.css
+++ b/style.css
@@ -250,6 +250,7 @@ ul {
 	  	margin-right: 2rem;
 	  	margin-top: 2rem; 
 	  }
+	.l-hardskills-items-xs {padding-left: 2rem; padding-right: 2rem;}
 	.l-softskills-content {border: none;}
 
 
