phone marge lpabout

--- a/style.css
+++ b/style.css
@@ -253,6 +253,8 @@ ul {
 	.l-hardskills-items-xs {padding-left: 2rem; padding-right: 2rem;}
 	.l-softskills-content {border: none;}
 
+	.l-p-about { padding-left: 3rem; padding-right: 3rem; }
+
 
 	/*<------------------------------------------------------------------------>
 	<------------------                $module                   ------------------>
