phone : ajustement marge droite des dots

--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ ul {
 			a:hover {font-size: 2rem;}
 			.l-hardskills-items-xs {padding-left: 2rem; padding-right: 2rem;}
 
-			.l-dot-xs { margin-top: 2rem; }
+			.l-dot-xs { margin-top: 2rem; margin-right: 2rem;}
 
 			.section-title { 
 			text-align: center;
